// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLink /> should render 1`] = `
.c0 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
}

<a
  class="c0 c1"
  href="/my-slug-is-here/"
>
  This is my title
</a>
`;

exports[`<NavLink /> should render link to front page 1`] = `
.c0 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(248, 207, 169);
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: "Krana Fat";
}

<a
  class="c0 c1"
  href="/"
>
  Lauri Lavanti
</a>
`;
